
4.18  2013-07-07
  - Added --mode option to Morbo.

4.17  2013-07-04
  - Updated jQuery to version 2.0.3.
  - Improved Mojo::IOLoop::Server to use Perfect Forward Secrecy for TLS.
  - Fixed Mojo::Transaction::WebSocket to generate RFC 6455 compliant
    Sec-WebSocket-Key headers. (josh)
  - Fixed bug where not all uppercase methods were hidden from the router.

4.16  2013-06-19
  - Improved Perl 5.10.x and 5.12.x compatibility. (trinitum)

4.15  2013-06-18
  - Added around_action hook.
  - Improved ojo to make the current controller object available to actions
    as $_. (jberger, sri)
  - Fixed a few error reporting bugs in Mojo::IOLoop::Client and
    Mojo::IOLoop::Server.
  - Fixed small emit_chain bug in Mojolicious::Plugins.

4.14  2013-06-10
  - Improved url_for performance slightly.
  - Fixed bug where match attribute and render_later method were not hidden
    from the router.

4.13  2013-06-09
  - Replaced ua method in Mojolicious::Controller with a helper.
  - Fixed url_for support for absolute URLs without scheme or authority.
    (bduggan, sri)

4.12  2013-06-07
  - Improved Mojo::Message::Request to allow a few more ASCII characters in
    URLs.

4.11  2013-06-03
  - Added allow and append methods to Mojo::Headers.
  - Added split_header function to Mojo::Util.
  - Fixed cookie quoting bugs.
  - Fixed a few small boundary and charset detection bugs in Mojo::Content.
  - Fixed a few small filename detection bugs in Mojo::Message.
  - Fixed small quality detection bug in Mojolicious::Types.

4.10  2013-06-01
  - Added link and vary methods to Mojo::Headers.

4.09  2013-05-31
  - Updated jQuery to version 2.0.2.
  - Increased default max_message_size from 5MB to 10MB in Mojo::Message.

4.08  2013-05-30
  - Improved Mojo::Message::Request to allow curly brackets in URLs.
  - Improved HMAC-SHA1 performance in Mojo::Util.

4.07  2013-05-26
  - Updated jQuery to version 2.0.1.
  - Fixed format handling in routes command.

4.06  2013-05-25