@@ -65,10 +65,10 @@ $daemon->listen([$listen])->start;
 my $proxy = Mojo::IOLoop->generate_port;
 my (%buffer, $connected, $read, $sent);
 my $nf
-  = "HTTP/1.1 404 NOT FOUND\x0d\x0a"
+  = "HTTP/1.1 501 FOO\x0d\x0a"
   . "Content-Length: 0\x0d\x0a"
   . "Connection: close\x0d\x0a\x0d\x0a";
-my $ok = "HTTP/1.0 200 OK\x0d\x0aX-Something: unimportant\x0d\x0a\x0d\x0a";
+my $ok = "HTTP/1.0 201 BAR\x0d\x0aX-Something: unimportant\x0d\x0a\x0d\x0a";
 Mojo::IOLoop->server(
   {address => '127.0.0.1', port => $proxy} => sub {
     my ($loop, $stream, $client) = @_;
